--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ build = "build.rs"
 
 [dependencies]
 clap = { version = "4.0.32", features = ["derive"] }
+regex = "1.7.0"
 tree-sitter = "0.20.9"
+walkdir = "2.3.2"
 
 [build-dependencies]
 cc = "*"
